<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="confirm">Warning</string>
    <string name="app_name">anTimeLog</string>
    <string name="setting">setting</string>
    <string name="ok">OK</string>
    <string name="cancel">CENCEL</string>
    <string name="analysis">summary</string>
    <string name="dateformat">yyyy-MM-dd</string>
    <string name="timeformat">HH:mm:ss</string>
    <string name="start">Start</string>
    <string name="event">Event</string>
    <string name="startp">START:</string>
    <string name="endp">END：  </string>
    <string name="typep">TYPE: </string>
    <string name="prev">&lt;&lt;</string>
    <string name="next">&gt;&gt;</string>
    <string name="donothing">do nothing</string>
    <string name="today">today</string>
    <string name="thisweek">this week</string>
    <string name="thismonth">this month</string>
    <string name="about">about</string>
    <string name="display_num">Display Event</string>
    <string name="display_num_comment">The number of display event on screen</string>
    <string name="default_view">Default view</string>
    <string name="default_view_comment">Default reports view</string>
    <string name="default_view_check_value">Today</string>
    <string name="default_display_num_value">30</string>
    <string name="author_info">
        Writed by laihj \n\n
	
      tutorial: starboard507.blogspot.com/p/tutorial.html \n\n
	
      blog:starboard507.blogspot.com \n\n
	
      E-mail:starboard.mob@gmail.com \n\n
	
      twitter: @laihj
    </string>
    <string name="tracking">No event tracking</string>
    <string name="show_icon_on_status_bar">show Notification</string>
    <string name="if_show_icon_on_stats_bar">show an icon on status bar to switch easily</string>
    <string name="clear_confirm">Your data will be clear....</string>
    <string name="recover_confirm">Your data will be overwrite....</string>
    <string name="clearall">Clear</string>
    <string name="backup">Backup</string>
    <string name="recovery">Recovery</string>
    <string name="backups"> backup secessed!</string>
    <string name="backupe">backup error,try again later.</string>
    <string name="nobackupfile">No backup file existed!</string>
    <string name="bytype">TYPE</string>
    <string name="byevent">EVENT</string>
    <string name="donate">
      </string>
    <string name="noteLabel">Note:</string>
</resources>
