<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

                
    <PreferenceCategory
            android:title="title">
         <ListPreference
                android:key="dispaly_preference"
                android:defaultValue="@string/default_display_num_value"
                android:title="@string/display_num"
                android:summary="@string/display_num_comment"
                android:entries="@array/displaynum"
                android:entryValues="@array/displaynum_value"
                android:dialogTitle="@string/display_num" />
        <ListPreference
                android:key="view_preference"
                android:defaultValue="@string/default_view_check_value"
                android:title="@string/default_view"
                android:summary="@string/default_view_comment"
                android:entries="@array/defaultview"
                android:entryValues="@array/defaultview_value"
                android:dialogTitle="@string/default_view" />
    </PreferenceCategory>

    
</PreferenceScreen>
